优化 使用国内公共静态资源库加速静态资源

--- a/public/index.html
+++ b/public/index.html
@@ -80,8 +80,8 @@
 
 <div id="bg"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.11.3"></script>
-<script src="https://cdn.jsdelivr.net/gh/ajlkn/skel@3.0.1/dist/skel.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/skel/3.0.1/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="https://lib.baomitu.com/layer/3.1.1/layer.js"></script>
